--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+azure-cognitiveservices-vision-customvision==3.1.0
+azure-common==1.1.28
+azure-communication-email==1.0.0
 azure-core==1.27.1
+azure-identity==1.13.0
+azure-mgmt-apimanagement==4.0.0
+azure-mgmt-core==1.4.0
 azure-search==1.0.0b2
 azure-search-documents==11.4.0b3
 azure-storage-blob==12.16.0
