--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-azure-cognitiveservices-vision-customvision==3.1.0
-azure-common==1.1.28
-azure-communication-email==1.0.0
-azure-core==1.27.1
-azure-identity==1.13.0
-azure-mgmt-apimanagement==4.0.0
-azure-mgmt-core==1.4.0
-azure-search==1.0.0b2
-azure-search-documents==11.4.0b3
-azure-storage-blob==12.16.0
+azure_storage==0.37.0
 Flask==2.2.5
-langchain==0.0.229
+langchain==0.0.240
+numpy==1.25.0
+pandas==2.0.2
+parsedatetime==2.6
 Pillow==9.5.0
+Pillow==10.0.0
+pydantic==1.10.11
+Requests==2.31.0
 torch==2.0.1
 transformers==4.30.2
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
-openpyxl==3.1.2
