--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-botbuilder-integration-aiohttp>=4.14.0
-botbuilder-dialogs>=4.14.0
-requests_oauthlib
-
+azure_storage==0.37.0
+beautifulsoup4==4.12.2
+botbuilder==0.0.1
+botbuilder_core==4.14.4
+botbuilder_dialogs==4.14.4
+botbuilder_schema==4.14.4
+googlesearch_python==1.2.3
+langchain==0.0.248
+numpy==1.24.3
+pandas==2.0.2
+pyodbc==4.0.39
+Requests==2.31.0
+requests_oauthlib==1.3.1
