--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-azure_storage==0.37.0
-beautifulsoup4==4.12.2
-botbuilder==0.0.1
-botbuilder_core==4.14.4
-botbuilder_dialogs==4.14.4
-botbuilder_schema==4.14.4
-googlesearch_python==1.2.3
-langchain==0.0.248
-numpy==1.24.3
-pandas==2.0.2
-pyodbc==4.0.39
-Requests==2.31.0
-requests_oauthlib==1.3.1
+﻿aiohttp
+botbuilder
+botbuilder_core
+botbuilder_dialogs
+botbuilder_schema
+langchain
+googlesearch_python
+beautifulsoup4
+numpy
+pandas
+pyodbc
+Requests
+requests_oauthlib
+azure-storage-blob 
+azure-identity
+azure-search
+azure-search-documents
+openai
+Unidecode
+openpyxl
